--- a/themes/hexo-theme-next-master/source/css/_common/scaffolding/highlight/theme.styl
+++ b/themes/hexo-theme-next-master/source/css/_common/scaffolding/highlight/theme.styl
@@ -117,6 +117,23 @@ if ($highlight-theme == 'night') {
     color: $highlight-comment,
     bg-color: $highlight-background
   };
+} else if ($highlight-theme === 'Atom One Dark Reasonable') {
+  $highlight-background   = #272822;
+  $highlight-current-line = #f92672;
+  $highlight-selection    = #303030;
+  $highlight-foreground   = #9e9e9e;
+  $highlight-comment      = #6a6a6a;
+  $highlight-red          = #98c379;
+  $highlight-orange       = #a6e22e;
+  $highlight-yellow       = #a68f01;
+  $highlight-green        = #4ca340;
+  $highlight-aqua         = #07a38f;
+  $highlight-blue         = #61aeee;
+  $highlight-purple       = #cc62fe;
+  $highlight-gutter       = {
+    color: $highlight-comment,
+    bg-color: $highlight-background
+  };
 } else {
   $highlight-background   = #f7f7f7;
   $highlight-current-line = #efefef;
