--- a/themes/hexo-theme-next-master/source/css/_common/scaffolding/highlight/theme.styl
+++ b/themes/hexo-theme-next-master/source/css/_common/scaffolding/highlight/theme.styl
@@ -117,7 +117,7 @@ if ($highlight-theme == 'night') {
     color: $highlight-comment,
     bg-color: $highlight-background
   };
-} else if ($highlight-theme === 'Atom One Dark Reasonable') {
+} else if ($highlight-theme == 'Atom One Dark Reasonable') {
   $highlight-background   = #272822;
   $highlight-current-line = #f92672;
   $highlight-selection    = #303030;
